--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>cloud-provider-payment8001</artifactId>
     <dependencies>
+        <!-- eureka-client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.jbf.springcloud</groupId>
             <artifactId>cloud-api-commons</artifactId>
