--- a/cloud-eureka-server7001/src/main/resources/application-集群.yml
+++ b/cloud-eureka-server7001/src/main/resources/application-集群.yml
@@ -9,9 +9,31 @@ eureka:
     fetch-registry: false
     service-url:
       #设置与eurekaServer交互的地址查询服务和注册服务都需要依赖这个地址
-      defaultZone: http://eureka7001.com:7001/eureka/
-  server:
-    enable-self-preservation: false
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/, http://eureka7003.com:7003/eureka/
+
+---
+spring:
+  profiles: 7001
 server:
   port: 7001
-#    eviction-interval-timer-in-ms: 2000
+eureka:
+  instance:
+    hostname: eureka7001.com
+
+---
+spring:
+  profiles: 7002
+server:
+  port: 7002
+eureka:
+  instance:
+    hostname: eureka7002.com
+
+---
+spring:
+  profiles: 7003
+server:
+  port: 7003
+eureka:
+  instance:
+    hostname: eureka7003.com
