--- a/cloud-provider-payment8001/src/main/resources/application-单实例.yml
+++ b/cloud-provider-payment8001/src/main/resources/application-单实例.yml
@@ -30,7 +30,12 @@ eureka:
     #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
     service-url:
-      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/, http://eureka7003.com:7003/eureka/
+      defaultZone: http://eureka7001.com:7001/eureka/
   instance:
     instance-id: payment8001
     prefer-ip-address: true
+    #Eureka客户端向服务端发送心跳的时间间隔，单位秒（默认30秒）
+    lease-renewal-interval-in-seconds:
+    #Eureka服务端在收到最后一次心跳后等待的时间上限，单位秒（默认90秒），超时剔除服务
+    lease-expiration-duration-in-seconds: 2
+
