--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -32,3 +32,8 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/, http://eureka7003.com:7003/eureka/
 
+  instance:
+    instance-id: payment8002
+    prefer-ip-address: true
+
+
