--- a/cloud-api-commons/pom.xml
+++ b/cloud-api-commons/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>cloud2022</artifactId>
-        <groupId>com.jbf.springcloud</groupId>
+        <groupId>com.jbf.springcloud.springcloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
