--- a/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
+++ b/cloudalibaba-sentinel-service8401/src/main/resources/application.yml
@@ -11,6 +11,18 @@ spring:
       transport:
         dashboard: 127.0.0.1:8080
         port: 8719
+#      datasource:
+#        ds1:
+#          nacos:
+#            server-addr: 127.0.0.1:8848  #nacos
+#          dataId: ${spring.application.name}
+#            groupId: DEFAULT_GROUP
+#            data-type: json
+#            rule-type: flow
+
+feign:
+  sentinel:
+    enabled: true #激活Sentinel 对Feign的支持
 
 management:
   endpoints:
